--- a/css/styles.css
+++ b/css/styles.css
@@ -81,6 +81,7 @@ font-family: 'Montserrat', sans-serif;
     margin: 10px auto 50px;
     line-height: 1.5;
     max-width: 100%;
+    font-size: 2vw;
 }
 
 hr {
@@ -91,7 +92,7 @@ hr {
 }
 
 .technolopgies-heading{
-    font-size: 3vw;
+    font-size: 5vw;
 }
 
 .col-lg-6{
@@ -99,8 +100,12 @@ hr {
 }
 
 .technologies-img{
-    height: 20vw;
+    height: 15vw;
     margin: 30px auto; 
+}
+
+.technolgies-text{
+    font-size: 3vw
 }
 
 /* @media (max-width: 768px) {
